@@ -17,4 +17,3 @@ level.update=UPDATE patches SET patch_level = ?, patch_date = NOW() WHERE system
 lock.read=SELECT patch_in_progress FROM patches WHERE system_name = ?
 lock.obtain=UPDATE patches SET patch_in_progress = 'T' WHERE system_name = ?
 lock.release=UPDATE patches SET patch_in_progress = 'F' WHERE system_name = ?
-
