@@ -49,7 +49,11 @@ Version 1.0.1
   https://sourceforge.net/support/tracker.php?aid=1661985
   
 - Added integration tests utilizing HSQLDB to further automate correctness
+  Mike Hardy
 
+- Implemented forcible table unlocking (useful if JVMs crash)
+  Mike Hardy
+  https://sourceforge.net/support/tracker.php?aid=1658547
 
 Version 1.0.0
 -------------
